created a context to share the states

--- a/src/app/_styles/globals.css
+++ b/src/app/_styles/globals.css
@@ -64,3 +64,10 @@
   --font-sans: "Inter", "Segoe UI", sans-serif;
   --font-mono: "JetBrains Mono", monospace;
 }
+
+.rdp {
+  --rdp-cell-size: 32px !important;
+  --rdp-accent-color: theme("colors.accent.500") !important;
+  --rdp-background-color: theme("colors.accent.600") !important;
+  margin: 0 !important;
+}
